<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exo_ID"
            android:layout_width="match_parent"
            android:layout_height="280dp"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/previous"
                android:src="@drawable/ic_skip_previous" />

            <Space
                android:layout_width="96dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_skip_next" />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/step_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                tools:text="Ahmed" />

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_ingredients"
        app:elevation="8dp"
        app:fabSize="normal"
        app:pressedTranslationZ="8dp" />

</FrameLayout>