<resources>
    <string name="app_name">Baking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="select_recipe">Select Recipe</string>
    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownies">Brownies</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="recipe_icon">recipe_icon</string>
</resources>
